fix: text alignment for page title on mobile

--- a/_sass/layout/_topbar.scss
+++ b/_sass/layout/_topbar.scss
@@ -145,7 +145,8 @@
   font-weight: 600;
   font-family: sans-serif;
   color: var(--topbar-text-color);
-  text-align: center;
+  text-align: left;
+  margin-left: 1.0rem;
   width: 70%;
   word-break: keep-all;
 
